# raspap-hls-stream-api

./: .gitignore  LICENSE  README.md  mediamtx_config.yml  pyproject.toml
backend/: administrative.py  auth.py  camera.py  main.py  service.py  settings.py  video_capture.py
scripts/: createStream.sh  redeploy.sh  serviceSetup.sh
services/: createStream.service  mediamtx.service  restapi.service
