[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[project]
name = "watch-camera"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "opencv-python>=4.12.0.88; sys_platform == 'darwin'",
    "opencv-python-headless==4.10.0.84; sys_platform == 'linux'",
    "aiohttp>=3.13.2",
    "loguru>=0.7.3",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'"
]

[tool.pyright]
# Include and exclude paths
include = ["backend"]

# Python version
pythonVersion = "3.12"

# Type checking mode: "off", "basic", "standard", "strict"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["backend"]
combine-as-imports = true
